--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/declaracion/rptDeclaracionJurAceptacionPerProvJur2021.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/declaracion/rptDeclaracionJurAceptacionPerProvJur2021.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="84103add-b080-41e4-b8b4-4a3ead4a059d">
-	<property name="ireport.zoom" value="2.5937424601000023"/>
-	<property name="ireport.x" value="126"/>
-	<property name="ireport.y" value="192"/>
+	<property name="ireport.zoom" value="1.5"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="pRubro" class="java.lang.String"/>
 	<parameter name="ubicacionImagenes" class="java.lang.String">
 		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquete/paquete/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
@@ -54,7 +54,7 @@
 	<title>
 		<band height="63" splitType="Stretch">
 			<image hAlign="Right">
-				<reportElement key="image-2" x="423" y="0" width="149" height="63" uuid="b108ab0a-f712-44fb-972b-a1b758535958"/>
+				<reportElement uuid="b108ab0a-f712-44fb-972b-a1b758535958" key="image-2" x="423" y="0" width="149" height="63"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -64,7 +64,7 @@
 				<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
 			</image>
 			<image>
-				<reportElement key="image-1" x="0" y="0" width="60" height="60" uuid="9f2d25ba-a67a-4b90-8657-c203af6a568c"/>
+				<reportElement uuid="9f2d25ba-a67a-4b90-8657-c203af6a568c" key="image-1" x="0" y="0" width="60" height="60"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -76,9 +76,10 @@
 		</band>
 	</title>
 	<pageHeader>
-		<band height="48" splitType="Stretch">
+		<band height="58" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement x="21" y="0" width="531" height="42" uuid="19876f79-7df9-4794-a033-eb3746e7c7dd"/>
+				<reportElement uuid="19876f79-7df9-4794-a033-eb3746e7c7dd" x="21" y="0" width="531" height="58"/>
+				<textElement/>
 				<textFieldExpression><![CDATA["DECLARACIÓN JURADA GLOBAL SOBRE LA INCORPORACIÓN DE LA OFERTA GLOBAL A LA BASE DE COMPRASAL, LA ACEPTACIÓN DE LAS ADJUDICACIONES Y EL CUMPLIMIENTO DE LAS ESPECIFICACIONES TÉCNICAS PLAZO Y LUGAR DE ENTREGA, DE: "+$P{pRubro}+" (AÑO "+$F{anho}+ ")"]]></textFieldExpression>
 			</textField>
 		</band>
@@ -89,7 +90,7 @@
 	<detail>
 		<band height="47" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement x="21" y="0" width="531" height="47" uuid="bdafee93-0adf-43a4-b29b-4052dc81284b"/>
+				<reportElement uuid="bdafee93-0adf-43a4-b29b-4052dc81284b" x="21" y="0" width="531" height="47"/>
 				<textElement textAlignment="Justified">
 					<font size="8"/>
 					<paragraph lineSpacing="Single"/>
@@ -109,49 +110,49 @@ $F{direccionRepre} + ", actuando en mi calidad de Representante Legal de la soci
 	<pageFooter>
 		<band height="108" splitType="Stretch">
 			<textField>
-				<reportElement x="20" y="11" width="512" height="12" uuid="a9c162c9-9b30-496d-b0e1-b810afdd01c8"/>
+				<reportElement uuid="a9c162c9-9b30-496d-b0e1-b810afdd01c8" x="20" y="11" width="512" height="12"/>
 				<textElement>
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Nombre del Representante Legal: " + $F{representanteLegal}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="20" y="44" width="437" height="12" uuid="c99b2154-eed0-4c3a-a9bf-c0bde0363cc9"/>
+				<reportElement uuid="c99b2154-eed0-4c3a-a9bf-c0bde0363cc9" x="20" y="44" width="437" height="12"/>
 				<textElement>
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA["No NIT de la Sociedad: "+$F{nitEmpresa}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="20" y="22" width="437" height="12" uuid="d3cf0a89-512a-498b-9f55-5b3b1582ab63"/>
+				<reportElement uuid="d3cf0a89-512a-498b-9f55-5b3b1582ab63" x="20" y="22" width="437" height="12"/>
 				<textElement>
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA["No DUI del Representante Legal: "+$F{duiRepre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="20" y="33" width="437" height="12" uuid="c99b2154-eed0-4c3a-a9bf-c0bde0363cc9"/>
+				<reportElement uuid="c99b2154-eed0-4c3a-a9bf-c0bde0363cc9" x="20" y="33" width="437" height="12"/>
 				<textElement>
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA["No NIT del Representante Legal: "+$F{nitRepre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="20" y="0" width="512" height="12" uuid="a9c162c9-9b30-496d-b0e1-b810afdd01c8"/>
+				<reportElement uuid="a9c162c9-9b30-496d-b0e1-b810afdd01c8" x="20" y="0" width="512" height="12"/>
 				<textElement>
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Nombre de la Sociedad o Empresa: " + $F{razonSocial}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="20" y="55" width="437" height="12" uuid="aedf7540-c06b-426a-83b4-f58ac3be72f4"/>
+				<reportElement uuid="aedf7540-c06b-426a-83b4-f58ac3be72f4" x="20" y="55" width="437" height="12"/>
 				<textElement>
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Correo Electrónico: "+$P{pCorreoPersona}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="8" y="72" width="564" height="36" uuid="da7945ea-077d-4e20-9934-0f9a68dc07f3"/>
+				<reportElement uuid="da7945ea-077d-4e20-9934-0f9a68dc07f3" x="8" y="72" width="564" height="36"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
 					<font fontName="Arial" size="8"/>
 				</textElement>
