--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/oferta/rptOfertaGlobalProv2021.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/oferta/rptOfertaGlobalProv2021.jrxml
@@ -146,7 +146,7 @@
 		<groupFooter>
 			<band height="61">
 				<textField>
-					<reportElement x="6" y="0" width="317" height="20" uuid="16c6cc98-10a9-4059-914b-9c0dba3b2fac"/>
+					<reportElement uuid="16c6cc98-10a9-4059-914b-9c0dba3b2fac" x="6" y="0" width="317" height="20"/>
 					<textElement>
 						<font fontName="Arial"/>
 					</textElement>
@@ -154,7 +154,7 @@
 " son:"]]></textFieldExpression>
 				</textField>
 				<componentElement>
-					<reportElement key="table 1" style="table 1" x="65" y="20" width="440" height="41" uuid="16ca16b2-3245-4f42-b39a-9b8d7101457b"/>
+					<reportElement uuid="16ca16b2-3245-4f42-b39a-9b8d7101457b" key="table 1" style="table 1" x="65" y="20" width="440" height="41"/>
 					<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
 						<datasetRun subDataset="dsMunInt" uuid="2eb2923d-6d3d-42a2-aaf7-fb722a43cc35">
 							<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstMunIntOfertaGlobal})]]></dataSourceExpression>
@@ -162,18 +162,18 @@
 						<jr:column width="150" uuid="c2666e7c-9206-4ed4-ba44-76db175e37fc">
 							<jr:columnHeader style="table_TD" height="16" rowSpan="1">
 								<staticText>
-									<reportElement x="0" y="0" width="150" height="16" uuid="5d0aa765-05ad-4dbe-96a8-69738e6a6094"/>
+									<reportElement uuid="5d0aa765-05ad-4dbe-96a8-69738e6a6094" x="0" y="0" width="150" height="16"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle">
 										<font fontName="Arial" size="8"/>
 									</textElement>
 									<text><![CDATA[Departamento]]></text>
 								</staticText>
 							</jr:columnHeader>
-							<jr:detailCell style="table 1_TD" height="14" rowSpan="1">
+							<jr:detailCell style="table 1_TD" height="12" rowSpan="1">
 								<textField isStretchWithOverflow="true">
-									<reportElement isPrintRepeatedValues="false" x="3" y="0" width="147" height="14" isPrintWhenDetailOverflows="true" uuid="12539dbc-158a-4a83-83e0-f5493ebaff24"/>
+									<reportElement uuid="12539dbc-158a-4a83-83e0-f5493ebaff24" isPrintRepeatedValues="false" x="3" y="0" width="147" height="12" isPrintWhenDetailOverflows="true"/>
 									<textElement verticalAlignment="Middle">
-										<font fontName="Arial" size="8"/>
+										<font fontName="Arial" size="7"/>
 									</textElement>
 									<textFieldExpression><![CDATA[$F{codigoDepartamento} + " - " + $F{nombreDepartamento}]]></textFieldExpression>
 								</textField>
@@ -182,7 +182,7 @@
 						<jr:columnGroup width="273" uuid="3ccdc781-3b67-4d55-8700-b8d84ac5af68">
 							<jr:columnHeader height="16" rowSpan="1">
 								<staticText>
-									<reportElement x="0" y="0" width="273" height="16" uuid="57351da3-0c13-4d5c-920f-c53a3ce992b1"/>
+									<reportElement uuid="57351da3-0c13-4d5c-920f-c53a3ce992b1" x="0" y="0" width="273" height="16"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle">
 										<font fontName="Arial" size="8"/>
 									</textElement>
@@ -190,18 +190,18 @@
 								</staticText>
 							</jr:columnHeader>
 							<jr:column width="273" uuid="7123efa7-f0ee-42f2-aacf-0c43707a9f52">
-								<jr:detailCell style="table 1_TD" height="14" rowSpan="1">
+								<jr:detailCell style="table 1_TD" height="12" rowSpan="1">
 									<textField isStretchWithOverflow="true">
-										<reportElement x="3" y="0" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="fcbe26ef-92b6-44b7-a898-a9c81c6cbaba"/>
+										<reportElement uuid="fcbe26ef-92b6-44b7-a898-a9c81c6cbaba" x="3" y="0" width="270" height="12" isPrintWhenDetailOverflows="true"/>
 										<textElement verticalAlignment="Middle">
-											<font fontName="Arial" size="8"/>
+											<font fontName="Arial" size="7"/>
 										</textElement>
 										<textFieldExpression><![CDATA[$F{codigoDepartamento}+"  "+$F{codigoMunicipio} +" "+$F{nombreMunicipio}]]></textFieldExpression>
 									</textField>
 								</jr:detailCell>
 							</jr:column>
 							<jr:column width="0" uuid="c840a6cf-aa87-4445-9bbc-5408ae463e70">
-								<jr:detailCell style="table 1_TD" height="14" rowSpan="1"/>
+								<jr:detailCell style="table 1_TD" height="12" rowSpan="1"/>
 							</jr:column>
 						</jr:columnGroup>
 					</jr:table>
@@ -213,25 +213,25 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="187" splitType="Stretch">
+		<band height="177" splitType="Stretch">
 			<staticText>
-				<reportElement x="233" y="29" width="100" height="20" uuid="54570f10-9883-46e5-b0c2-c161f0858a49"/>
+				<reportElement uuid="54570f10-9883-46e5-b0c2-c161f0858a49" x="233" y="29" width="100" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" isBold="true"/>
 				</textElement>
 				<text><![CDATA[OFERTA GLOBAL]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="170" y="53" width="226" height="20" uuid="30872ab0-7e72-470e-90b9-4a6263559ea4"/>
+				<reportElement uuid="30872ab0-7e72-470e-90b9-4a6263559ea4" x="170" y="53" width="226" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["DEPARTAMENTO: "+$F{departamento}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="6" y="109" width="558" height="78" uuid="70c75c21-8c80-4df6-97b9-76f6f59e541e"/>
+				<reportElement uuid="70c75c21-8c80-4df6-97b9-76f6f59e541e" x="6" y="109" width="558" height="68"/>
 				<textElement textAlignment="Justified" markup="styled">
-					<font fontName="Arial"/>
+					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Yo, "+ $F{razonSocial} + " proveedor(a) registrado(a) por la Comisión Nacional para la Micro y Pequeña Empresa (CONAMYPE), para participar en los procesos de "+
 "compra de los bienes y servicios del Programa Paquete Escolar "+ $F{anho} + " que realizarán los centros educativos, por este medio presento mi oferta global "+
@@ -240,14 +240,14 @@
 "\n\nb) Los precios con los que participaré en el proceso de contratación son los siguientes:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="123" y="76" width="321" height="20" uuid="30872ab0-7e72-470e-90b9-4a6263559ea4"/>
+				<reportElement uuid="30872ab0-7e72-470e-90b9-4a6263559ea4" x="123" y="76" width="321" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["PROGRAMA \"PAQUETE ESCOLAR "+ $F{anho}+"\""]]></textFieldExpression>
 			</textField>
 			<image hAlign="Right">
-				<reportElement key="image-2" x="423" y="0" width="149" height="63" uuid="7b533e97-debd-4fc6-9ca5-d774a9ae2295"/>
+				<reportElement uuid="7b533e97-debd-4fc6-9ca5-d774a9ae2295" key="image-2" x="423" y="0" width="149" height="63"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -257,7 +257,7 @@
 				<imageExpression><![CDATA[$P{pEscudo}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="0" y="0" width="47" height="47" uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf"/>
+				<reportElement uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf" x="0" y="0" width="47" height="47"/>
 				<imageExpression><![CDATA[$P{pEscudo}+File.separator+"escudo_rpt.png"]]></imageExpression>
 			</image>
 		</band>
@@ -271,7 +271,7 @@
 	<detail>
 		<band height="61" splitType="Stretch">
 			<componentElement>
-				<reportElement key="table" style="table" x="40" y="0" width="496" height="50" uuid="2e043f5e-df76-474b-956f-fda6a0692d47"/>
+				<reportElement uuid="2e043f5e-df76-474b-956f-fda6a0692d47" key="table" style="table" x="40" y="0" width="496" height="50"/>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
 					<datasetRun subDataset="dsPrecios" uuid="17adf11c-89cb-4186-b1e6-3d20b108ce0c">
 						<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstDetItemOfertaGlobal})]]></dataSourceExpression>
@@ -279,7 +279,7 @@
 					<jr:column width="285" uuid="0396c88a-a072-46c8-9884-6838a5014a02">
 						<jr:columnHeader style="table_TD" height="22" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="285" height="22" uuid="97e0c53e-d118-408b-b2a3-1f79d19ccf2d"/>
+								<reportElement uuid="97e0c53e-d118-408b-b2a3-1f79d19ccf2d" x="0" y="0" width="285" height="22"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font fontName="Arial" size="8"/>
 								</textElement>
@@ -288,9 +288,9 @@
 						</jr:columnHeader>
 						<jr:detailCell style="table_TD" height="14" rowSpan="1">
 							<textField isStretchWithOverflow="true">
-								<reportElement x="3" y="0" width="279" height="14" isPrintWhenDetailOverflows="true" uuid="777ca4c3-d7d2-46ea-9099-7f56ad535a60"/>
+								<reportElement uuid="777ca4c3-d7d2-46ea-9099-7f56ad535a60" x="3" y="0" width="279" height="14" isPrintWhenDetailOverflows="true"/>
 								<textElement verticalAlignment="Middle">
-									<font fontName="Arial" size="8"/>
+									<font fontName="Arial" size="7"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{descripcionItem}]]></textFieldExpression>
 							</textField>
@@ -299,7 +299,7 @@
 					<jr:column width="76" uuid="84dc2fd2-5413-4184-a957-2bad60f3dcbb">
 						<jr:columnHeader style="table_TD" height="22" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="75" height="22" uuid="b59c2d47-dda2-44cc-b9dc-3f8f83f99ce2"/>
+								<reportElement uuid="b59c2d47-dda2-44cc-b9dc-3f8f83f99ce2" x="0" y="0" width="75" height="22"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font fontName="Arial" size="8"/>
 								</textElement>
@@ -308,9 +308,9 @@
 						</jr:columnHeader>
 						<jr:detailCell style="table_TD" height="14" rowSpan="1">
 							<textField pattern="###0.00;-###0.00">
-								<reportElement x="0" y="0" width="72" height="14" uuid="1d8bf5d0-899a-4f62-985a-992d5b87cbd5"/>
+								<reportElement uuid="1d8bf5d0-899a-4f62-985a-992d5b87cbd5" x="0" y="0" width="72" height="14"/>
 								<textElement textAlignment="Right" verticalAlignment="Middle">
-									<font fontName="Arial" size="8"/>
+									<font fontName="Arial" size="7"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{precioMaxReferencia}]]></textFieldExpression>
 							</textField>
@@ -319,7 +319,7 @@
 					<jr:column width="78" uuid="8b9830c0-7808-44fd-ab78-aeec43a676e6">
 						<jr:columnHeader style="table_TD" height="22" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="78" height="22" uuid="609fbeab-2755-4965-9c0c-4930354e978f"/>
+								<reportElement uuid="609fbeab-2755-4965-9c0c-4930354e978f" x="0" y="0" width="78" height="22"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font fontName="Arial" size="8"/>
 								</textElement>
@@ -328,9 +328,9 @@
 						</jr:columnHeader>
 						<jr:detailCell style="table_TD" height="14" rowSpan="1">
 							<textField pattern="###0.00;-###0.00" isBlankWhenNull="false">
-								<reportElement x="0" y="0" width="75" height="14" uuid="95291b06-5729-49f3-8363-e5ea2016d910"/>
+								<reportElement uuid="95291b06-5729-49f3-8363-e5ea2016d910" x="0" y="0" width="75" height="14"/>
 								<textElement textAlignment="Right" verticalAlignment="Middle">
-									<font fontName="Arial" size="8"/>
+									<font fontName="Arial" size="7"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{precioUnitario}==null?java.math.BigDecimal.ZERO:$F{precioUnitario}]]></textFieldExpression>
 							</textField>
@@ -346,14 +346,14 @@
 	<pageFooter>
 		<band height="112" splitType="Stretch">
 			<textField>
-				<reportElement x="75" y="8" width="489" height="18" uuid="19da908d-3200-4752-91da-73acd0e9e280"/>
+				<reportElement uuid="19da908d-3200-4752-91da-73acd0e9e280" x="75" y="8" width="489" height="18"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
 					<font fontName="Arial" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Lugar y fecha de la presentación de Oferta: "+$P{pLugar}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="40" y="26" width="521" height="86" uuid="16c6cc98-10a9-4059-914b-9c0dba3b2fac"/>
+				<reportElement uuid="16c6cc98-10a9-4059-914b-9c0dba3b2fac" x="40" y="26" width="521" height="86"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial" size="9"/>
 				</textElement>
@@ -364,7 +364,7 @@
 "No. de Gestión: "+$P{pIdGestion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="-1" y="101" width="100" height="11" uuid="c0fd3cfa-0584-4128-9722-d8ffc37a1644"/>
+				<reportElement uuid="c0fd3cfa-0584-4128-9722-d8ffc37a1644" x="-1" y="101" width="100" height="11"/>
 				<textElement>
 					<font fontName="Arial" size="8"/>
 				</textElement>
