--- a/paquescolar-rpt/src/main/java/sv/gob/mined/apps/reportes/contratos/rptOrdenInicio.jrxml
+++ b/paquescolar-rpt/src/main/java/sv/gob/mined/apps/reportes/contratos/rptOrdenInicio.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="48ba8c8b-7a8a-4894-ab10-a088ef24a595">
 	<property name="ireport.zoom" value="1.6105100000000012"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="144"/>
+	<property name="ireport.y" value="240"/>
 	<parameter name="pIdContrato" class="java.math.BigDecimal">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -46,7 +46,7 @@ where con.id_contrato = $P{pIdContrato}]]>
 	<title>
 		<band height="79" splitType="Stretch">
 			<image hAlign="Right">
-				<reportElement uuid="a3a21642-5656-4bc8-9f47-63ca6738e700" key="image-2" x="389" y="10" width="149" height="60"/>
+				<reportElement key="image-2" x="389" y="10" width="149" height="60" uuid="a3a21642-5656-4bc8-9f47-63ca6738e700"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -56,7 +56,7 @@ where con.id_contrato = $P{pIdContrato}]]>
 				<imageExpression><![CDATA[$P{ubicacionImagenes} +File.separator+ "logo_mined_rpt.png"]]></imageExpression>
 			</image>
 			<image>
-				<reportElement uuid="d662ed9c-377b-4d74-87d4-2293e65456b4" key="image-1" x="10" y="10" width="60" height="60"/>
+				<reportElement key="image-1" x="10" y="10" width="60" height="60" uuid="d662ed9c-377b-4d74-87d4-2293e65456b4"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -66,7 +66,7 @@ where con.id_contrato = $P{pIdContrato}]]>
 				<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo_rpt.png"]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement uuid="5843cd26-1ae0-4edd-ac6d-bac74c0c756d" key="staticText-5" x="93" y="10" width="298" height="66"/>
+				<reportElement key="staticText-5" x="93" y="10" width="298" height="66" uuid="5843cd26-1ae0-4edd-ac6d-bac74c0c756d"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none">
 					<font fontName="Arial" size="10"/>
 				</textElement>
@@ -77,8 +77,7 @@ where con.id_contrato = $P{pIdContrato}]]>
 	<pageHeader>
 		<band height="35" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="6ae493c4-d3f3-483d-ad19-54ca567ef0a7" x="236" y="4" width="319" height="14"/>
-				<textElement/>
+				<reportElement x="236" y="4" width="319" height="14" uuid="6ae493c4-d3f3-483d-ad19-54ca567ef0a7"/>
 				<text><![CDATA[Lugar y fecha: _________________________ de ___________ 20__]]></text>
 			</staticText>
 		</band>
@@ -89,7 +88,7 @@ where con.id_contrato = $P{pIdContrato}]]>
 	<detail>
 		<band height="89" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="004f63a0-9b2a-443d-8bb3-af68cf23ab5f" x="10" y="0" width="528" height="89" isPrintWhenDetailOverflows="true"/>
+				<reportElement x="10" y="0" width="528" height="89" isPrintWhenDetailOverflows="true" uuid="004f63a0-9b2a-443d-8bb3-af68cf23ab5f"/>
 				<textElement textAlignment="Justified"/>
 				<textFieldExpression><![CDATA["Señor(a) proveedor/a: "+$F{NOMBRE_REPRESENTANTE}+"\nPresente.-\n\n"
 .concat("Hago referencia al contrato No. "+$F{NUMERO_CONTRATO}+" de "+$F{DESCRIPCION_RUBRO}+" AÑO "+$F{ANHO}+" suscrito entre: a) el Representante legal del Organismo de Administración Escolar del Centro Educativo: "+$F{NOMBRE}+" código  "+$F{CODIGO_ENTIDAD}+"; y b) su persona como contratista.\n\n")
@@ -105,7 +104,7 @@ where con.id_contrato = $P{pIdContrato}]]>
 	<pageFooter>
 		<band height="129" splitType="Stretch">
 			<textField isBlankWhenNull="false">
-				<reportElement uuid="e9f1de7c-ed35-405b-8724-dccf383f8a4d" key="textField-4" x="22" y="70" width="233" height="42"/>
+				<reportElement key="textField-4" x="22" y="70" width="233" height="42" uuid="e9f1de7c-ed35-405b-8724-dccf383f8a4d"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -115,11 +114,10 @@ where con.id_contrato = $P{pIdContrato}]]>
 				<textElement textAlignment="Left">
 					<font fontName="Arial" size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{MIEMBRO_FIRMA}+
-"\nFirma representante legal del\nOrganismo de Admón. Escolar"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["\n\nFirma representante legal del\nOrganismo de Admón. Escolar"]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement uuid="ba878810-84e8-480c-8004-d115a19cedbf" key="textField-5" x="305" y="70" width="233" height="52"/>
+				<reportElement key="textField-5" x="305" y="70" width="233" height="52" uuid="ba878810-84e8-480c-8004-d115a19cedbf"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -133,7 +131,7 @@ where con.id_contrato = $P{pIdContrato}]]>
 "\nFirma del contratista\nSello(si aplica)"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="18af7cef-8595-4f59-ab66-a70c2575ae1c" key="staticText-5" x="293" y="54" width="14" height="13"/>
+				<reportElement key="staticText-5" x="293" y="54" width="14" height="13" uuid="18af7cef-8595-4f59-ab66-a70c2575ae1c"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -146,13 +144,13 @@ where con.id_contrato = $P{pIdContrato}]]>
 				<text><![CDATA[F.:]]></text>
 			</staticText>
 			<line>
-				<reportElement uuid="0e260beb-3753-4139-bcb7-00780f5ed128" key="line-1" x="24" y="66" width="168" height="1"/>
+				<reportElement key="line-1" x="24" y="66" width="168" height="1" uuid="0e260beb-3753-4139-bcb7-00780f5ed128"/>
 			</line>
 			<line>
-				<reportElement uuid="6d0e9280-7bd1-49d0-8bd7-f4c97448a439" key="line-2" x="307" y="66" width="168" height="1"/>
+				<reportElement key="line-2" x="307" y="66" width="168" height="1" uuid="6d0e9280-7bd1-49d0-8bd7-f4c97448a439"/>
 			</line>
 			<staticText>
-				<reportElement uuid="a364ab06-2bfd-4dd0-9dcf-6d51a56a9682" key="staticText-1" x="10" y="54" width="14" height="13"/>
+				<reportElement key="staticText-1" x="10" y="54" width="14" height="13" uuid="a364ab06-2bfd-4dd0-9dcf-6d51a56a9682"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -165,7 +163,7 @@ where con.id_contrato = $P{pIdContrato}]]>
 				<text><![CDATA[F.:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="a364ab06-2bfd-4dd0-9dcf-6d51a56a9682" key="staticText-1" x="10" y="0" width="60" height="13"/>
+				<reportElement key="staticText-1" x="10" y="0" width="60" height="13" uuid="a364ab06-2bfd-4dd0-9dcf-6d51a56a9682"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -178,7 +176,7 @@ where con.id_contrato = $P{pIdContrato}]]>
 				<text><![CDATA[ENTREGA:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="a364ab06-2bfd-4dd0-9dcf-6d51a56a9682" key="staticText-1" x="293" y="0" width="60" height="13"/>
+				<reportElement key="staticText-1" x="293" y="0" width="60" height="13" uuid="a364ab06-2bfd-4dd0-9dcf-6d51a56a9682"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
