--- a/paquescolar-rpt/src/main/java/sv/gob/mined/apps/reportes/contratos/rptContratoUtiles2021Nat.jrxml
+++ b/paquescolar-rpt/src/main/java/sv/gob/mined/apps/reportes/contratos/rptContratoUtiles2021Nat.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptContratoPersonaNaturalUtiles" pageWidth="612" pageHeight="792" columnWidth="510" leftMargin="51" rightMargin="51" topMargin="39" bottomMargin="39" uuid="7dab6810-11a0-4fbc-b522-9ce09f52dce4">
 	<property name="ireport.zoom" value="2.1435888100000025"/>
-	<property name="ireport.x" value="132"/>
-	<property name="ireport.y" value="532"/>
+	<property name="ireport.x" value="75"/>
+	<property name="ireport.y" value="519"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -174,7 +174,7 @@ ORDER BY TO_NUMBER(NO_ITEM)]]>
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" size="10"/>
+						<font fontName="Arial" size="8"/>
 					</textElement>
 					<textFieldExpression><![CDATA["CONTRATO No. ME-"+$F{NUMERO_CONTRATO}+"/"+$F{ANHO_CONTRATO}+"/COD:"+$F{CODIGO_ENTIDAD}]]></textFieldExpression>
 				</textField>
@@ -187,7 +187,7 @@ ORDER BY TO_NUMBER(NO_ITEM)]]>
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Justified" markup="styled">
-						<font fontName="Arial" size="8" isUnderline="false" isPdfEmbedded="true"/>
+						<font fontName="Arial" size="7" isUnderline="false" isPdfEmbedded="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["<style isBold='true' pdfFontName='Helvetica-Bold'>NOSOTROS,</style> "+$F{NOMBRE_MIEMBRO}+" actuando en nombre y representación del Organismo de Administración Escolar ".concat($F{INICIALES_MODALIDAD}).
 concat(" del ").concat($F{NOMBRE}).concat(" con código ").concat($F{CODIGO_ENTIDAD}).concat(", Municipio "+$F{NOMBRE_MUNICIPIO}+", Departamento "+$F{NOMBRE_DEPARTAMENTO}).
@@ -208,14 +208,14 @@ concat(" ) IVA incluido a los bienes que se les aplica; monto que será pagado 
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" size="10"/>
+						<font fontName="Arial" size="8"/>
 					</textElement>
 					<textFieldExpression><![CDATA["\""+$P{descripcionRubro}+" "+$F{ANHO_CONTRATO}+"\"\nFUENTE DE FINANCIAMIENTO: GOES"]]></textFieldExpression>
 				</textField>
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="133" splitType="Stretch">
+			<band height="118" splitType="Stretch">
 				<staticText>
 					<reportElement key="staticText-1" x="0" y="15" width="14" height="13" uuid="2347e2ab-ea28-4cf5-b364-7b1029c59552"/>
 					<box>
@@ -225,12 +225,12 @@ concat(" ) IVA incluido a los bienes que se les aplica; monto que será pagado 
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement>
-						<font fontName="Arial"/>
+						<font fontName="Arial" size="7"/>
 					</textElement>
 					<text><![CDATA[F.:]]></text>
 				</staticText>
 				<textField isBlankWhenNull="false">
-					<reportElement key="textField-4" x="12" y="28" width="233" height="63" uuid="6986f4b0-50f5-4834-b462-d60b8908e4aa"/>
+					<reportElement key="textField-4" x="12" y="28" width="233" height="41" uuid="6986f4b0-50f5-4834-b462-d60b8908e4aa"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -238,7 +238,7 @@ concat(" ) IVA incluido a los bienes que se les aplica; monto que será pagado 
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Left">
-						<font fontName="Arial" size="9"/>
+						<font fontName="Arial" size="7"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{NOMBRE_MIEMBRO}+
 "\nPresidente(a) de Organismo de"+
@@ -257,12 +257,12 @@ concat(" ) IVA incluido a los bienes que se les aplica; monto que será pagado 
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement>
-						<font fontName="Arial"/>
+						<font fontName="Arial" size="7"/>
 					</textElement>
 					<text><![CDATA[F.:]]></text>
 				</staticText>
 				<textField isBlankWhenNull="false">
-					<reportElement key="textField-5" x="273" y="28" width="237" height="63" uuid="60580c6c-4d3e-43b2-8c1e-bad11e269a6c"/>
+					<reportElement key="textField-5" x="273" y="28" width="237" height="41" uuid="60580c6c-4d3e-43b2-8c1e-bad11e269a6c"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -270,7 +270,7 @@ concat(" ) IVA incluido a los bienes que se les aplica; monto que será pagado 
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement>
-						<font fontName="Arial" size="9"/>
+						<font fontName="Arial" size="7"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{NOMBRE_PRESENTANTE}+
 "\nNo DUI: "+$F{NUMERO_DUI}+
@@ -279,10 +279,10 @@ concat(" ) IVA incluido a los bienes que se les aplica; monto que será pagado 
 				<line>
 					<reportElement key="line-2" x="275" y="24" width="168" height="1" uuid="a839d4a8-5863-40d6-8fce-689e47e036e8"/>
 				</line>
-				<textField>
-					<reportElement x="1" y="90" width="510" height="43" uuid="b4fd67de-87d5-4d1c-8dd3-300ae2d87732"/>
+				<textField isStretchWithOverflow="true">
+					<reportElement x="1" y="80" width="510" height="38" uuid="b4fd67de-87d5-4d1c-8dd3-300ae2d87732"/>
 					<textElement textAlignment="Center">
-						<font fontName="Arial" size="9" isBold="true"/>
+						<font fontName="Arial" size="6" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[($F{DISTRIBUIDOR}.equals("1"))?($F{MOSTRAR_LEYENDA}.toString().equals("1")?"Nota: Este proveedor es contribuyente del IVA, y debe presentar fotocopia de la tarjeta del IVA, solvencia original o copia certificada por un notario de la Solvencia Municipal y Solvencia Tributaria":"Nota: Este proveedor debe presentar Solvencia Original o Copia certificada por un notario de la Solvencia Municipal y Solvencia Tributaria."):
 ($F{MOSTRAR_LEYENDA}.toString().equals("1")?"Nota: Este proveedor es contribuyente del IVA, y debe presentar fotocopia de la tarjeta del IVA, solvencia original o copia certificada por un notario de la Solvencia Municipal y Solvencia Tributaria":"")]]></textFieldExpression>
@@ -296,7 +296,7 @@ concat(" ) IVA incluido a los bienes que se les aplica; monto que será pagado 
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Left">
-						<font fontName="Arial" size="9"/>
+						<font fontName="Arial" size="7"/>
 					</textElement>
 					<text><![CDATA[(sello OAE)]]></text>
 				</staticText>
@@ -482,7 +482,7 @@ concat(" ) IVA incluido a los bienes que se les aplica; monto que será pagado 
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Justified" verticalAlignment="Top" rotation="None" markup="styled">
-						<font fontName="Arial" size="8" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="Helvetica" pdfEncoding="Cp1252" isPdfEmbedded="true"/>
+						<font fontName="Arial" size="7" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="Helvetica" pdfEncoding="Cp1252" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="Single"/>
 					</textElement>
 					<textFieldExpression><![CDATA["La cantidad mencionada anteriormente será pagada en forma total o de conformidad a los bienes recibidos a satisfacción por parte del Centro Educativo a través del Administrador de este contrato (Presidente del ORGANISMO). Los documentos a presentar, para efectos de gestión de pago por parte del contratista son: I) Factura de Consumidor Final o Recibo, el cual debe ser emitido a nombre del Organismo, en el que se indique una descripción del bien suministrado, la cantidad, el precio unitario y el monto total; II) Acta de Recepción firmada y sellada por parte del Presidente del ORGANISMO, de haber recibido a satisfacción los bienes objeto de este contrato; III) Cualquier resolución que se celebre y modifique lo acordado en el presente instrumento como Resoluciones de Prórroga, Resoluciones Modificativas, Resoluciones de Multa, e incluso Resoluciones de Extinción.".
@@ -539,7 +539,7 @@ concat(Herramientas.getNomMes($F{FECHA_EMISION})+" del año "+Herramientas.getNu
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement>
-					<font fontName="Arial" size="7"/>
+					<font fontName="Arial" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{USUARIO_INSERCION}+" - "+(new SimpleDateFormat("HH:mm dd/MM/yyyy")).format(new Date())]]></textFieldExpression>
 			</textField>
@@ -556,7 +556,7 @@ concat(Herramientas.getNomMes($F{FECHA_EMISION})+" del año "+Herramientas.getNu
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement>
-					<font fontName="Arial" size="7"/>
+					<font fontName="Arial" size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{USUARIO_INSERCION}+" - "+(new SimpleDateFormat("HH:mm dd/MM/yyyy")).format(new Date())]]></textFieldExpression>
 			</textField>
