--- a/paquescolar-rpt/src/main/java/sv/gob/mined/apps/reportes/notasactas/rptNotaAdjudicacionBean2021.jrxml
+++ b/paquescolar-rpt/src/main/java/sv/gob/mined/apps/reportes/notasactas/rptNotaAdjudicacionBean2021.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptNotaAdjudicacion" pageWidth="612" pageHeight="792" columnWidth="528" leftMargin="42" rightMargin="42" topMargin="39" bottomMargin="39" uuid="ad17c64a-0600-4c9a-b23f-e00788b53d02">
 	<property name="ireport.zoom" value="1.210000000000001"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="310"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -110,7 +110,7 @@
 		<groupHeader>
 			<band height="159" splitType="Stretch">
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-					<reportElement uuid="6b873f65-f86f-424f-9fea-fcfe7c8fc6ba" key="textField-1" x="0" y="89" width="528" height="70"/>
+					<reportElement key="textField-1" x="0" y="89" width="528" height="70" uuid="6b873f65-f86f-424f-9fea-fcfe7c8fc6ba"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -126,7 +126,7 @@ concat(Herramientas.getNumDia($F{fechaApertura})).concat(" del mes de ").concat(
 concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(", que ha sido adjudicado/a en este proceso de Libre Gestión del contrato No. "+$P{pNumContrato}+" de acuerdo al siguiente detalle:")]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement uuid="1ac50f42-fc87-400b-b50a-fabea9d929c4" key="staticText-5" x="104" y="12" width="265" height="35"/>
+					<reportElement key="staticText-5" x="104" y="12" width="265" height="35" uuid="1ac50f42-fc87-400b-b50a-fabea9d929c4"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -139,7 +139,7 @@ concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(",
 					<text><![CDATA[NOTA DE ADJUDICACION A PROVEEDORES]]></text>
 				</staticText>
 				<image>
-					<reportElement uuid="338cd60b-1e23-4e0e-8439-02f7d9a9ed84" key="image-1" x="1" y="0" width="60" height="60"/>
+					<reportElement key="image-1" x="1" y="0" width="60" height="60" uuid="338cd60b-1e23-4e0e-8439-02f7d9a9ed84"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -149,7 +149,7 @@ concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(",
 					<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo_rpt.png"]]></imageExpression>
 				</image>
 				<image hAlign="Right">
-					<reportElement uuid="2632783e-f28c-4bc6-9f4b-874e42a79b28" key="image-2" x="379" y="0" width="149" height="60"/>
+					<reportElement key="image-2" x="379" y="0" width="149" height="60" uuid="2632783e-f28c-4bc6-9f4b-874e42a79b28"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -161,9 +161,9 @@ concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(",
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="219" splitType="Stretch">
+			<band height="180" splitType="Stretch">
 				<staticText>
-					<reportElement uuid="de5dc715-d3ad-42f1-9a81-f35d862f6093" key="staticText-1" x="1" y="74" width="163" height="22"/>
+					<reportElement key="staticText-1" x="1" y="74" width="163" height="22" uuid="de5dc715-d3ad-42f1-9a81-f35d862f6093"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -176,7 +176,7 @@ concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(",
 					<text><![CDATA[F:]]></text>
 				</staticText>
 				<textField isBlankWhenNull="false">
-					<reportElement uuid="9d282fe1-047f-48cb-a0f3-03c54589dda1" key="textField-4" stretchType="RelativeToTallestObject" x="1" y="96" width="232" height="32"/>
+					<reportElement key="textField-4" stretchType="RelativeToTallestObject" x="1" y="96" width="232" height="32" uuid="9d282fe1-047f-48cb-a0f3-03c54589dda1"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -189,7 +189,7 @@ concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(",
 					<textFieldExpression><![CDATA["Nombre: ".concat($F{nombreMiembro})]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement uuid="01efb8f7-22cb-4afa-a43b-19df234e2b4a" key="staticText-3" x="282" y="74" width="163" height="22"/>
+					<reportElement key="staticText-3" x="282" y="74" width="163" height="22" uuid="01efb8f7-22cb-4afa-a43b-19df234e2b4a"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -202,13 +202,13 @@ concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(",
 					<text><![CDATA[F: ]]></text>
 				</staticText>
 				<line>
-					<reportElement uuid="509cb70a-e23e-4e20-8e45-8022dd6c60bb" key="line-1" x="12" y="86" width="150" height="1"/>
+					<reportElement key="line-1" x="12" y="86" width="150" height="1" uuid="509cb70a-e23e-4e20-8e45-8022dd6c60bb"/>
 				</line>
 				<line>
-					<reportElement uuid="911b008c-fa46-427f-a1d2-3fff370bf44c" key="line-2" x="293" y="86" width="150" height="1"/>
+					<reportElement key="line-2" x="293" y="86" width="150" height="1" uuid="911b008c-fa46-427f-a1d2-3fff370bf44c"/>
 				</line>
 				<staticText>
-					<reportElement uuid="bd483124-6657-4b1a-8249-fee170a5089f" key="staticText-6" x="1" y="20" width="101" height="33"/>
+					<reportElement key="staticText-6" x="1" y="20" width="101" height="33" uuid="bd483124-6657-4b1a-8249-fee170a5089f"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -221,7 +221,7 @@ concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(",
 					<text><![CDATA[NOTIFICADOR / A:]]></text>
 				</staticText>
 				<textField isBlankWhenNull="false">
-					<reportElement uuid="21b7ecb0-6b2e-4ac6-89ed-f0eca91e928e" key="textField-7" stretchType="RelativeToTallestObject" x="282" y="96" width="228" height="84"/>
+					<reportElement key="textField-7" stretchType="RelativeToTallestObject" x="282" y="96" width="228" height="84" uuid="21b7ecb0-6b2e-4ac6-89ed-f0eca91e928e"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -236,7 +236,7 @@ concat("\nDUI: ").concat((($F{numeroDui}==null)?"":$F{numeroDui})).
 concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement uuid="c88d29b3-de73-4d88-bc77-1e6bce7d9fbf" key="staticText-4" x="164" y="74" width="63" height="13"/>
+					<reportElement key="staticText-4" x="164" y="74" width="63" height="13" uuid="c88d29b3-de73-4d88-bc77-1e6bce7d9fbf"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -249,14 +249,14 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 					<text><![CDATA[(sello OAE)]]></text>
 				</staticText>
 				<textField>
-					<reportElement uuid="5921f3b8-c23b-46fd-a7ca-006ad136db46" x="1" y="151" width="267" height="29"/>
+					<reportElement x="1" y="151" width="267" height="29" uuid="5921f3b8-c23b-46fd-a7ca-006ad136db46"/>
 					<textElement markup="none">
 						<font fontName="Arial" size="10"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$P{pEncargadoDeCompras}]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement uuid="de5dc715-d3ad-42f1-9a81-f35d862f6093" key="staticText-1" x="-1" y="138" width="163" height="22"/>
+					<reportElement key="staticText-1" x="-1" y="138" width="163" height="22" uuid="de5dc715-d3ad-42f1-9a81-f35d862f6093"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -269,21 +269,8 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 					<text><![CDATA[F:]]></text>
 				</staticText>
 				<line>
-					<reportElement uuid="509cb70a-e23e-4e20-8e45-8022dd6c60bb" key="line-1" x="10" y="150" width="150" height="1"/>
+					<reportElement key="line-1" x="10" y="150" width="150" height="1" uuid="509cb70a-e23e-4e20-8e45-8022dd6c60bb"/>
 				</line>
-				<textField isBlankWhenNull="false">
-					<reportElement uuid="9d282fe1-047f-48cb-a0f3-03c54589dda1" key="textField-4" stretchType="RelativeToTallestObject" x="-1" y="204" width="232" height="15"/>
-					<box>
-						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="0.0" lineColor="#000000"/>
-						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					</box>
-					<textElement>
-						<font fontName="Arial" size="11"/>
-					</textElement>
-					<textFieldExpression><![CDATA["Nombre: ____________________________"]]></textFieldExpression>
-				</textField>
 			</band>
 		</groupFooter>
 	</group>
@@ -302,7 +289,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 	<detail>
 		<band height="39" splitType="Stretch">
 			<componentElement>
-				<reportElement uuid="a55f229a-affd-4e28-9328-95ad03e99f06" key="table" style="table_TD" x="32" y="0" width="450" height="39"/>
+				<reportElement key="table" style="table_TD" x="32" y="0" width="450" height="39" uuid="a55f229a-affd-4e28-9328-95ad03e99f06"/>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
 					<datasetRun subDataset="dsDetalleItem" uuid="3a2213dd-47a6-4b63-b4f7-2f8233725fc2">
 						<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstDetalleItem})]]></dataSourceExpression>
@@ -310,7 +297,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 					<jr:columnGroup width="372" uuid="68e3fc1e-6bb2-4150-bc49-786b89ea039c">
 						<jr:columnFooter style="table_TD" height="17" rowSpan="1">
 							<staticText>
-								<reportElement uuid="cc8730c7-f3a0-475c-b4bb-f73d94748d30" key="staticText-6" x="0" y="0" width="360" height="15"/>
+								<reportElement key="staticText-6" x="0" y="0" width="360" height="15" uuid="cc8730c7-f3a0-475c-b4bb-f73d94748d30"/>
 								<box>
 									<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 									<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -326,7 +313,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 						<jr:column width="41" uuid="e73852f8-04c5-4a8f-80ed-e34ed152f442">
 							<jr:columnHeader style="table_TD" height="15" rowSpan="1">
 								<staticText>
-									<reportElement uuid="6634436f-b4e8-4389-9592-c5e2f607c3b3" key="staticText-1" x="0" y="0" width="41" height="15"/>
+									<reportElement key="staticText-1" x="0" y="0" width="41" height="15" uuid="6634436f-b4e8-4389-9592-c5e2f607c3b3"/>
 									<box>
 										<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 										<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -341,7 +328,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 							</jr:columnHeader>
 							<jr:detailCell style="table_TD" height="13" rowSpan="1">
 								<textField>
-									<reportElement uuid="27406fb3-0500-4f28-8f06-d997119217a4" x="0" y="0" width="41" height="13"/>
+									<reportElement x="0" y="0" width="41" height="13" uuid="27406fb3-0500-4f28-8f06-d997119217a4"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle">
 										<font fontName="Arial" size="7"/>
 									</textElement>
@@ -352,7 +339,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 						<jr:column width="204" uuid="99daeb2a-9861-44c0-b00a-281d23883b4d">
 							<jr:columnHeader style="table_TD" height="15" rowSpan="1">
 								<staticText>
-									<reportElement uuid="b4b9bedc-0f46-4f1d-a4a3-f2678de5109b" key="staticText-2" x="0" y="0" width="204" height="15"/>
+									<reportElement key="staticText-2" x="0" y="0" width="204" height="15" uuid="b4b9bedc-0f46-4f1d-a4a3-f2678de5109b"/>
 									<box>
 										<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 										<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -367,7 +354,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 							</jr:columnHeader>
 							<jr:detailCell style="table_TD" height="13" rowSpan="1">
 								<textField>
-									<reportElement uuid="d21cb86d-4473-4361-8a28-d4a94cde1fa8" x="1" y="0" width="201" height="13"/>
+									<reportElement x="1" y="0" width="201" height="13" uuid="d21cb86d-4473-4361-8a28-d4a94cde1fa8"/>
 									<textElement verticalAlignment="Middle">
 										<font fontName="Arial" size="7"/>
 									</textElement>
@@ -378,7 +365,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 						<jr:column width="48" uuid="a0cb7063-22ca-435e-ba0f-e7e91a5cb94f">
 							<jr:columnHeader style="table_TD" height="15" rowSpan="1">
 								<staticText>
-									<reportElement uuid="2b3025bf-529a-41f6-b8a7-5468a88598e5" key="staticText-3" x="0" y="0" width="48" height="15"/>
+									<reportElement key="staticText-3" x="0" y="0" width="48" height="15" uuid="2b3025bf-529a-41f6-b8a7-5468a88598e5"/>
 									<box>
 										<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 										<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -393,7 +380,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 							</jr:columnHeader>
 							<jr:detailCell style="table_TD" height="13" rowSpan="1">
 								<textField pattern="#,##0">
-									<reportElement uuid="9ed8afea-69cd-4e8f-86eb-670ca2bead30" x="0" y="0" width="44" height="13"/>
+									<reportElement x="0" y="0" width="44" height="13" uuid="9ed8afea-69cd-4e8f-86eb-670ca2bead30"/>
 									<textElement textAlignment="Right" verticalAlignment="Middle">
 										<font fontName="Arial" size="7"/>
 									</textElement>
@@ -404,7 +391,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 						<jr:column width="79" uuid="9a3ee870-d541-4d27-8842-b2b44724bf0a">
 							<jr:columnHeader style="table_TD" height="15" rowSpan="1">
 								<staticText>
-									<reportElement uuid="8ac47648-c99e-4a03-af7a-4b999201a2ff" key="staticText-4" x="0" y="0" width="79" height="15"/>
+									<reportElement key="staticText-4" x="0" y="0" width="79" height="15" uuid="8ac47648-c99e-4a03-af7a-4b999201a2ff"/>
 									<box>
 										<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 										<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -419,7 +406,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 							</jr:columnHeader>
 							<jr:detailCell style="table_TD" height="13" rowSpan="1">
 								<textField pattern="#,##0.00">
-									<reportElement uuid="58d37b6d-28d8-429a-abd1-7a2a63ef5ae5" x="0" y="0" width="74" height="13"/>
+									<reportElement x="0" y="0" width="74" height="13" uuid="58d37b6d-28d8-429a-abd1-7a2a63ef5ae5"/>
 									<textElement textAlignment="Right" verticalAlignment="Middle">
 										<font fontName="Arial" size="7"/>
 									</textElement>
@@ -431,7 +418,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 					<jr:column width="78" uuid="3a844a88-2dd0-4e87-aec9-7eade67a3b4b">
 						<jr:columnHeader style="table_TD" height="15" rowSpan="1">
 							<staticText>
-								<reportElement uuid="ccdd9ab2-d034-41b5-ac5e-17b196be8f4f" key="staticText-5" x="0" y="0" width="78" height="15"/>
+								<reportElement key="staticText-5" x="0" y="0" width="78" height="15" uuid="ccdd9ab2-d034-41b5-ac5e-17b196be8f4f"/>
 								<box>
 									<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 									<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -446,7 +433,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 						</jr:columnHeader>
 						<jr:columnFooter style="table_TD" height="17" rowSpan="1">
 							<textField pattern="#,##0.00">
-								<reportElement uuid="907c84aa-9897-45a2-8b7d-f82d4b71c1a0" x="0" y="0" width="75" height="15"/>
+								<reportElement x="0" y="0" width="75" height="15" uuid="907c84aa-9897-45a2-8b7d-f82d4b71c1a0"/>
 								<textElement textAlignment="Right" verticalAlignment="Middle">
 									<font fontName="Arial" size="8" isBold="true"/>
 								</textElement>
@@ -455,7 +442,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 						</jr:columnFooter>
 						<jr:detailCell style="table_TD" height="13" rowSpan="1">
 							<textField pattern="#,##0.00">
-								<reportElement uuid="608f5fc9-16e3-460f-9b7d-7698b72ee768" x="0" y="0" width="75" height="13"/>
+								<reportElement x="0" y="0" width="75" height="13" uuid="608f5fc9-16e3-460f-9b7d-7698b72ee768"/>
 								<textElement textAlignment="Right" verticalAlignment="Middle">
 									<font fontName="Arial" size="7"/>
 								</textElement>
@@ -473,7 +460,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 	<pageFooter>
 		<band height="11" splitType="Stretch">
 			<textField pattern="" isBlankWhenNull="false">
-				<reportElement uuid="70986635-b782-4246-8541-0f78ae9a6b61" key="textField-8" x="-1" y="0" width="176" height="11"/>
+				<reportElement key="textField-8" x="-1" y="0" width="176" height="11" uuid="70986635-b782-4246-8541-0f78ae9a6b61"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
