--- a/cooperacion-web/src/main/webapp/resources/template/plantilla.xhtml
+++ b/cooperacion-web/src/main/webapp/resources/template/plantilla.xhtml
@@ -40,7 +40,7 @@
 
             <div class="layout-main">
 
-                <div class="layout-content" >
+                <div class="layout-content" style="max-width: 95%; margin: auto;">
                     <h:form prependId="false">
                         <ui:insert name="contenido"/>
                     </h:form>
